Documentation added for model.